--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduPlanner</title>
+    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="./register.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Welcome</h1>
-    <main>
-        <div style="background-color: aquamarine;width: 100;height: 100;" id="data">
-            <p id="showdata">hola</p>
+    <hr class="register_line">
+    <hr class="register_line_down">
+    <main class="flex_container">
+        <div class="welcome_container">
+            <h1 class="welcome_text">WELCOME !!!</h1>
+        </div>
+        <div class="form_container">
+            <a>Form</a>
         </div>
     </main>
+    
+    <footer class="footer_container">
+        <p>&copy; 2024 EduPlanner_Team</p>
+    </footer>
+    
 </body>
+
 </html>
