Update: Progress form design

--- a/src/ui/register/register.html
+++ b/src/ui/register/register.html
@@ -18,7 +18,15 @@
             <h1 class="welcome_text">WELCOME !!!</h1>
         </div>
         <div class="form_container">
-            <a>Form</a>
+            <label for="username">USERNAME</label>
+            <input type="text">
+            <label for="mail">MAIL</label>
+            <input type="text">
+            <label for="password">PASSWORD</label>
+            <input type="password">
+            <label for="repeat_password">REPEAT PASSWORD</label>
+            <input type="password">
+            <button for="register" type="submit">Register</button>
         </div>
     </main>
     
