Update: Animations button register

--- a/src/ui/register/register.html
+++ b/src/ui/register/register.html
@@ -19,9 +19,9 @@
         </div>
         <div class="form_container">
             <label for="username">USERNAME</label>
-            <input type="text">
+            <input type="text" placeholder="username123">
             <label for="mail">MAIL</label>
-            <input type="text">
+            <input type="text" placeholder="newUser@gmail.com">
             <label for="password">PASSWORD</label>
             <input type="password">
             <label for="repeat_password">REPEAT PASSWORD</label>
