Update: notifications created

--- a/src/ui/register/register.html
+++ b/src/ui/register/register.html
@@ -31,10 +31,10 @@
             <input 
                 type="password" 
                 id="password">
-            <label for="repeat_password">REPEAT PASSWORD</label>
+            <label for="confirm_password">CONFIRM PASSWORD</label>
             <input 
                 type="password" 
-                id="repeat_password">
+                id="confirm_password">
             <button for="register" type="submit">Register</button>
         </form> 
     </main>
