Update: Connection button create

--- a/src/ui/login/login.html
+++ b/src/ui/login/login.html
@@ -26,7 +26,9 @@
                 <button for="login" type="submit">Login</button>
                 <label for="forgot_password" class="forgot_password">Forgot password</label>
                 <hr class="login_line_middle">
-                <button for="create" type="submit">Create new account</button>
+                <a href="../register/register.html">
+                    <button for="create" type="button" >Create new account</button>
+                </a>
             </form> 
         </div>
     </main>
