Update: Forgot interface created

--- a/src/ui/login/login.html
+++ b/src/ui/login/login.html
@@ -18,16 +18,18 @@
         </div>
         <div class="login_container">
             <form action="summit">
-                <div class="icon_img"></div>
+                <img src="../img/Generic avatar.png" class="avatar" alt="">
                 <label for="username">EMAIL</label>
                 <input type="text">
                 <label for="password">PASSWORD</label>
                 <input type="text">
                 <button for="login" type="submit">Login</button>
-                <label for="forgot_password" class="forgot_password">Forgot password</label>
+                <a href="../forgotPass/forgotPass.html" class="forgot_password" id="forgot_password">
+                    <label for="forgot_password" class="forgot_text" >Forgot password</label>
+                </a>
                 <hr class="login_line_middle">
                 <a href="../register/register.html">
-                    <button for="create" type="button" >Create new account</button>
+                    <button for="create" type="button">Create new account</button>
                 </a>
             </form> 
         </div>
