--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <!-- Sidebar - Subjects -->
+        <!-- Sidebar de categorias -->
         <section class="sidebar">
             <h2>Subject</h2>
             <div class="subject-list">
@@ -58,13 +61,12 @@
                             <button class="edit-btn">✏️</button>
                         </td>
                     </tr>
-                    <!-- Add more tasks similarly -->
                 </table>
             </div>
             <button class="add-task-btn">Add task ➕</button>
         </section>
 
-        <!-- Details Section -->
+        <!-- detalles de seccion -->
         <section class="details-section">
             <h2>Details</h2>
             <div class="details-box">
@@ -75,7 +77,7 @@
                 <h3>Completed</h3>
                 <details>
                     <summary>Lab 8</summary>
-                    <!-- Additional info here -->
+                    <!-- Info adicional -->
                 </details>
                 <details>
                     <summary>Foro 1.5</summary>
