add login validate procedure

--- a/src/ui/login/login.html
+++ b/src/ui/login/login.html
@@ -22,7 +22,7 @@
                 <label for="user_e">EMAIL</label>
                 <input type="text" id="user_e">
                 <label for="user_pas">PASSWORD</label>
-                <input type="text" id="user_pas">
+                <input type="password" id="user_pas">
                 <button for="login" type="submit" id="buttonValidate">Login</button>
                 <a href="../forgotPass/forgotPass.html" class="forgot_password" id="forgot_password">
                     <label for="forgot_password" class="forgot_text" >Forgot password</label>
