--- a/src/ui/login/login.html
+++ b/src/ui/login/login.html
@@ -37,6 +37,6 @@
     <footer class="footer_container">
         <p>&copy; 2024 EduPlanner_Team</p>
     </footer>
-    <script src="./login.js"></script>
+    <script src="./login.js" type="module"></script>
 </body>
 </html>
