Agregué una flecha para en el register para volver al login

--- a/src/ui/register/register.html
+++ b/src/ui/register/register.html
@@ -13,6 +13,8 @@
     <hr class="register_line">
     <hr class="register_line_down">
     <main class="flex_container">
+        <!-- Felcha para volver atrás -->
+        <button id="backButton" class="back-button">← Back</button>
         <div class="welcome_container">
             <h1 class="welcome_text">WELCOME !!!</h1>
         </div>
