Creé boton para cerrar sesion desde el home y le agregué pequeña logica

--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -93,6 +93,7 @@
                 </details>
             </div>
         </section>
+        <button id="logout-btn">Logout</button>
     </div>
     <script src="../home/home.js" type="module"></script>
 </body>
