Update: Changes in back button and welcome background image

--- a/src/ui/register/register.html
+++ b/src/ui/register/register.html
@@ -14,7 +14,7 @@
     <hr class="register_line_down">
     <main class="flex_container">
         <!-- Felcha para volver atrás -->
-        <button id="backButton" class="back-button">← Back</button>
+        <button id="backButton" class="back-button">←Back to Login</button>
         <div class="welcome_container">
             <h1 class="welcome_text">WELCOME !!!</h1>
         </div>
