--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -11,63 +11,63 @@
 </head>
 <body>
     <div class="container">
-        <!-- Sidebar de categorias -->
-        <section class="sidebar">
+        <section class="sidebar"> <!-- Subject Section -->
             <h2>Subject</h2>
-            <div class="subject-list">
-                <div class="subject-card green">
-                    <div class="subject-info">
-                        <h3>Databases II</h3>
-                        <p>Lunes-Viernes <br> 10:00 - 12:00</p>
+            <div class="subject-container">
+                <section class="name-colum">
+                    <label for="Name">Name</label>
+                    <label for="Date">Date</label>
+                    <img src="../img/filter.png" for="filter_icon">
+                </section>
+                <div class="subject-list">
+                    <div class="subject-card green">
+                        <div class="subject-info">
+                            <p for="subject1">Subject1</p>
+                            <p for="schedule">Lunes-Viernes <br> 10:00-12:00</p>
+                        </div>
+                        <button class="delete-btn">
+                            <img src="../img/trash-black.png">
+                        </button>
                     </div>
-                    <button class="delete-btn">🗑️</button>
-                </div>
-                <div class="subject-card pink">
-                    <div class="subject-info">
-                        <h3>Networks</h3>
-                        <p>Tuesday <br> 14:00 - 16:00</p>
-                    </div>
-                    <button class="delete-btn">🗑️</button>
-                </div>
-                <div class="subject-card blue">
-                    <div class="subject-info">
-                        <h3>English</h3>
-                        <p>Friday <br> 13:00 - 14:00</p>
-                    </div>
-                    <button class="delete-btn">🗑️</button>
                 </div>
             </div>
-            <button class="add-subject-btn">Add subject ➕</button>
+            <button class="add-subject-btn">
+                <span class="btn-text">Add Subject</span>
+                <img src="../img/plus.png" alt="Icono" class="btn-img">
+            </button>
         </section>
-
-        <!-- Task Section -->
-        <section class="task-section">
+        <section class="task-section"> <!-- Task Section -->
             <h2>Task</h2>
-            <div class="task-list">
-                <table>
-                    <tr>
-                        <th>Name</th>
-                        <th>Category</th>
-                        <th>Priority</th>
-                        <th>Date</th>
-                        <th>Status</th>
-                    </tr>
-                    <tr>
-                        <td>Lab 8</td>
-                        <td>Maths</td>
-                        <td>High</td>
-                        <td>16/10/2024</td>
-                        <td>
-                            <button class="edit-btn">✏️</button>
-                        </td>
-                    </tr>
-                </table>
+            <div>
+                <div class="task-container">
+                    <div class="task-list">
+                        <table>
+                            <tr>
+                                <th>Name</th>
+                                <th>Category</th>
+                                <th>Priority</th>
+                                <th>Date</th>
+                                <th>Status</th>
+                            </tr>
+                            <tr>
+                                <td>Lab 8</td>
+                                <td>Maths</td>
+                                <td>High</td>
+                                <td>16/10/2024</td>
+                                <td>
+                                    <button class="edit-btn">✏️</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
-            <button class="add-task-btn">Add task ➕</button>
+            <button class="add-subject-btn">
+                <span class="btn-text">Add Subject</span>
+                <img src="../img/plus.png" alt="Icono" class="btn-img">
+            </button>
         </section>
-
-        <!-- detalles de seccion -->
-        <section class="details-section">
+        <section class="details-section"> <!-- Detalles de seccion -->
             <h2>Details</h2>
             <div class="details-box">
                 <h3>Lab 8</h3>
@@ -93,8 +93,10 @@
                 </details>
             </div>
         </section>
-        <button id="logout-btn">Logout</button>
     </div>
+    <footer class="footer_container">
+        <p>&copy; 2024 EduPlanner_Team</p>
+    </footer>
     <script src="../home/home.js" type="module"></script>
 </body>
 </html>
