--- a/src/ui/register/register.html
+++ b/src/ui/register/register.html
@@ -14,7 +14,10 @@
     <hr class="register_line_down">
     <main class="flex_container">
         <!-- Felcha para volver atrás -->
-        <button id="backButton" class="back-button">←Back to Login</button>
+         <a href="../login/login.html">
+            <button id="backButton" class="back-button">←Back to Login</button>
+         </a>
+        
         <div class="welcome_container">
             <h1 class="welcome_text">WELCOME !!!</h1>
         </div>
