Update: Register ready

--- a/src/ui/register/register.html
+++ b/src/ui/register/register.html
@@ -35,11 +35,13 @@
             <label for="password">PASSWORD</label>
             <input 
                 type="password" 
-                id="password">
+                id="password"
+                placeholder="Password">
             <label for="confirm_password">CONFIRM PASSWORD</label>
             <input 
                 type="password" 
-                id="confirm_password">
+                id="confirm_password"
+                placeholder="Confirm Password" required>
             <button for="register" type="submit">Register</button>
         </form> 
     </main>
