Update: Table ready

--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -64,7 +64,18 @@
                                     <img src="../img/edit.png" >
                                 </button>
                             </td>
-                            
+                        </tr>
+                        <tr>
+                            <td>Lab 8</td>
+                            <td>Maths</td>
+                            <td>High</td>
+                            <td>16/10/2024</td>
+                            <td><input type="checkbox"></td>
+                            <td>
+                                <button class="edit-btn">
+                                    <img src="../img/edit.png" >
+                                </button>
+                            </td>
                         </tr>
                     </table>
                 </div>
