--- a/src/ui/login/login.html
+++ b/src/ui/login/login.html
@@ -17,7 +17,7 @@
             <h1 class="welcome_text">WELCOME !!!</h1>
         </div>
         <div class="login_container">
-            <form id="loginForm">
+            <form id="loginForm" action="submit">
                 <img src="../img/Generic avatar.png" class="avatar" alt="">
                 <label for="user_e">EMAIL</label>
                 <input type="text" id="user_e">
