--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -98,6 +98,21 @@
             </div>
         </section>
     </div>
+
+    <div id="addSubjectModal" class="modal">  
+        <div class="modal-content">  
+            <span class="close" id="closeModal">&times;</span>  
+            <h2>Add New Subject</h2>  
+            <form id="addSubjectForm">  
+                <label for="subjectName">Subject Name:</label>  
+                <input type="text" id="subjectName" name="subjectName" required>  
+                <label for="subjectDate">Date:</label>  
+                <input type="date" id="subjectDate" name="subjectDate" required>  
+                <input type="date" name="subjectDateEnd" id="subjectDateEnd">
+                <button type="submit">Add Subject</button>  
+            </form>  
+        </div>  
+    </div> 
     <footer class="footer_container">
         <p>&copy; 2024 EduPlanner_Team</p>
     </footer>
