Update: validations on register(email, password)

--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <div class="container">
+        <button class="menu-btn" onclick="toggleMenu()">☰</button>
+        <div id="sidebar_menu" class="sidebar_menu">
+            <a href="#">Acount</a>
+            <a href="#">History</a>
+            <a href="javascript:void(0)" class="close-btn-sidebar" onclick="toggleMenu()"></a>
+        </div>
         <section class="sidebar"> <!-- Subject Section -->
             <h2>Subject</h2>
             <div class="subject-container">
@@ -93,8 +99,14 @@
             </div>
             <hr class="home_line_middle">
             <div class="completed-container">
-                <h3>Completed</h3>
-                <div></div>
+                <div class="completed-title">
+                    <h3>Completed</h3>
+                <img src="../img/arrow_down.png" class="arrow down">
+                </div>
+                <div class="task-completed">
+                    <label class="task-completed-example">Lab 8</label>
+                    <img src="../img/arrow_drop_down.png" class="drop_down_img">
+                </div>
             </div>
         </section>
     </div>
