Fix: Problems with the merge

--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -114,9 +114,12 @@
     </div>
 
     <div id="addSubjectModal" class="modal">  
-        <div class="modal-content">  
-            <span class="close" id="closeModal">&times;</span>  
-            <h2>Add New Subject</h2>  
+        <div class="modal-content"> 
+            <div class="modal-tittle">
+                <h2>Add New Subject</h2>  
+                <span class="close" id="closeModal">&times;</span>
+            </div> 
+             
             <form id="addSubjectForm">  
                 <label for="subjectName">Subject Name:</label>  
                 <input type="text" id="subjectName" name="subjectName" required>  
@@ -127,6 +130,7 @@
             </form>  
         </div>  
     </div> 
+
     <footer class="footer_container">
         <p>&copy; 2024 EduPlanner_Team</p>
     </footer>
