--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -87,24 +87,6 @@
                 </div>
             </div>
         </section>
-        <section class="details-section"> <!-- Detalles de seccion -->
-            <h2>Details</h2>
-            <div class="details-container">
-                <h3 class="title-detail">Lab8</h3>
-                <div class="details-info-container"></div>
-            </div>
-            <hr class="home_line_middle">
-            <div class="completed-container">
-                <div class="completed-title">
-                    <h3>Completed</h3>
-                    <img src="../img/arrow_down.png" class="arrow down">
-                </div>
-                <div class="task-completed">
-                    <label class="task-completed-example">Lab 8</label>
-                    <img src="../img/arrow_drop_down.png" class="drop_down_img">
-                </div>
-            </div>
-        </section>
     </div>
 
     <div id="addSubjectModal" class="modal">
@@ -121,6 +103,37 @@
                 <input type="date" id="subjectDate" name="subjectDate" required>
                 <input type="date" name="subjectDateEnd" id="subjectDateEnd">
                 <button type="submit">Add Subject</button>
+            </form>
+        </div>
+    </div>
+    <div id="addTaskModal" class="modal-task">
+        <div class="modal-content-task">
+            <div class="modal-tittle-task">
+                <h2>Add New Task</h2>
+                <span class="close-task" id="closeModal-task">&times;</span>
+            </div>
+
+            <form id="addTaskForm">
+                <label for="taskName">Task Name:</label> <!--nombre de tarea-->
+                <input type="text" id="taskName" name="taskName" required>
+                <label for="taskNotes">Notes:</label> <!--Notas-->
+                <input type="text" id="taskNotes" name="tasktNotes" required>
+                <label for="taskDate">Date:</label> <!--Date-->
+                <input type="date" id="taskDate" name="taskDate" required>
+                <input type="date" name="taskDateEnd" id="taskDateEnd">
+                <label for="taskCategory">Task Category</label> <!--Categoria-->
+                <input type="text" id="taskCategory" name="taskCategory" required>
+                <select name="taskStatus" id="taskStatus"> <!-- Estado tarea-->
+                    <option value="Pending">Pending</option>
+                    <option value="In process">In process</option>
+                    <option value="Concluded">Concluded</option>
+                </select>
+                <select name="taskPriority" id="taskPriority"> <!--Prioridad-->
+                    <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
+                </select>
+                <button type="submit" id="sendTask">Add Task</button> <!--BOTON ENVIAR TAREA-->
             </form>
         </div>
     </div>
