Agregue estilos al select de taskPriority y taskStatus addTask

--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -118,12 +118,12 @@
                     <input type="date" name="taskDateEnd" id="taskDateEnd">
                     <label for="taskCategory">Task Category:</label> 
                     <input type="text" id="taskCategory" name="taskCategory" required>
-                    <select name="taskStatus" id="taskStatus"> 
+                    <select name="taskStatus" id="taskStatus" class="task-status-options"> 
                         <option value="Pending">Pending</option>
                         <option value="In process">In process</option>
                         <option value="Concluded">Concluded</option>
                     </select>
-                    <select name="taskPriority" id="taskPriority"> 
+                    <select name="taskPriority" id="taskPriority" class="task-priority-options"> 
                         <option value="Low">Low</option>
                         <option value="Medium">Medium</option>
                         <option value="High">High</option>
