Update: Changes at design

--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -165,7 +165,7 @@
         <section class="details-section"> <!-- Detalles de seccion -->
             <h2>Details</h2>
             <div class="details-container">
-                <h3 class="title-detail">Lab8</h3>
+                <h3 class="title-detail"></h3>
                 <div class="details-info-container"></div>
             </div>
             <hr class="home_line_middle">
@@ -173,16 +173,10 @@
                 <div class="completed-title">
                     <h3>Completed</h3>
                 <img src="../img/arrow_down.png" class="arrow down">
-                </div>
-                <div class="task-completed">
-                    <label class="task-completed-example">Lab 8</label>
-                    <img src="../img/arrow_drop_down.png" class="drop_down_img">
-                </div>
+                </div>  
             </div>
         </section>
     </div>
-    
-
     <footer class="footer_container">
         <p>&copy; 2024 EduPlanner_Team</p>
     </footer>
