Jala abrir varias veces el edit

--- a/src/ui/home/home.html
+++ b/src/ui/home/home.html
@@ -142,12 +142,12 @@
                     <label for="editTaskName">Task Name:</label> 
                     <input type="text" id="editTaskName" name="taskName" required>
                     <label for="editTaskNotes">Notes:</label> 
-                    <input type="text" id="editTaskNotes" name="tasktNotes" required>
+                    <input type="text" id="editTaskNotes" name="tasktNotes">
                     <label for="editTaskDate">Date:</label> 
                     <input type="date" id="editTaskDate" name="taskDate" required>
                     <input type="date" name="editTaskDateEnd" id="editTaskDateEnd">
                     <label for="editTaskCategory">Task Category</label> 
-                    <input type="text" id="editTaskCategory" name="taskCategory" required>
+                    <input type="text" id="editTaskCategory" name="taskCategory" >
                     <select name="editTaskStatus" id="editTaskStatus"> 
                         <option value="Pending">Pending</option>
                         <option value="In process">In process</option>
